# CloneProject

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  x64-debug.bat  x64-debug.sh
Source/Foundation/: Application.cpp  Application.hpp  CMakeLists.txt  CMakeSources.cmake  cpf.hpp
Source/Foundation/Alloc/: System.hpp
Source/Foundation/Component/: Camera.cpp  Camera.hpp  Sprite.cpp  Sprite.hpp
Source/Foundation/Debug/: Debug.hpp
Source/Foundation/FileSystem/: DataStream.cpp  DataStream.hpp  FileSystem.cpp  FileSystem.hpp  Path.cpp  Path.hpp
Source/Foundation/Manager/: ObjectManager.cpp  ObjectManager.hpp  RenderWindowManager.cpp  RenderWindowManager.hpp  ResourceManager.cpp  ResourceManager.hpp  SceneManager.cpp  SceneManager.hpp  VertexArrayManager.cpp  VertexArrayManager.hpp
Source/Foundation/Math/: Math.cpp  Math.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Utility.cpp  Utility.hpp  Vector2.hpp  Vector3.hpp
Source/Foundation/Mesh/: Mesh.cpp  Mesh.hpp  MeshData.cpp  MeshData.hpp
Source/Foundation/Prerequisites/: PlatformDefines.hpp  PrerequisitesUtil.hpp  StdHeaders.hpp
Source/Foundation/RenderAPI/: Buffer.cpp  Buffer.hpp  GpuBuffer.cpp  GpuBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderAPI.cpp  RenderAPI.hpp  RenderTarget.hpp  RenderWindow.cpp  RenderWindow.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  Utility.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexDataDesc.cpp  VertexDataDesc.hpp  VertexDeclaration.cpp  VertexDeclaration.hpp
(+692 files in other folders)
